fixed logo being too small

--- a/frontend/src/components/styles/Navigation.css
+++ b/frontend/src/components/styles/Navigation.css
@@ -8,7 +8,8 @@
   position: fixed;
   top: 20px;
   left: 30px;
-  width: 40px;
+  width: 70px;
+  border-radius: 15px;
 }
 
 .loginText {
